# million-swc

./: Cargo.toml  package.json
src/: config.rs  constants.rs  lib.rs  transform.rs  utils.rs
src/constants/: constant_string.rs  internal.rs
src/transform/: auto_transform.rs  block.rs  block_transform.rs
src/utils/: assertion.rs  ast.rs  get_import_specifier.rs  get_vaild_import_definition.rs  is_jsx_component_element.rs  is_use_client.rs  jsx.rs  register.rs
tests/: fixture.rs  use_client.rs
