[package]
name = "million_swc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[profile.release]
lto = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.114"
swc_core = { version = "0.90.*", features = ["ecma_plugin_transform","ecma_parser_typescript"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.


[dev-dependencies]
testing = "0.35.18"